--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Github Page</title>
+    <link rel="stylesheet" type="text/css" href="mainstyle.css">
   </head>
 
 <body>
+  <h1>Welcome to my page. It sucks right now but it will get better once I learn materialize.</h1>
   <div w3-include-html="benhameeen.github.io/Scam-Site/welcome.html"></div>
 </body>
 </html>
