--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <title>Github Page</title>
     <link rel="stylesheet" type="text/css" href="mainstyle.css">
