--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <title>Github Page</title>
-    <link rel="stylesheet" type="text/css" href="mainstyle.css">
+    <link rel="stylesheet" href="mainstyle.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
   </head>
 
 <body>
