--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <body>
   <h1>Welcome to my page. It sucks right now but it will get better once I learn materialize.</h1>
-  <div w3-include-html="benhameeen.github.io/Scam-Site/welcome.html"></div>
+  <p>I know thats not how to properly use the h1 tag, but like I said, it will get better</p>
 </body>
 </html>
