--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Github Page</title>
     <link rel="stylesheet" href="mainstyle.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+
   </head>
 
 <body>
