--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
 
 <body>
+  <div class="card-panel blue darken-3"
   <h1>Welcome to my page. It sucks right now but it will get better once I learn materialize.</h1>
   <p>I know thats not how to properly use the h1 tag, but like I said, it will get better</p>
+  </div>
 </body>
 </html>
