--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
   <h1>Welcome to my page. It sucks right now but it will get better once I learn materialize.</h1>
   <p>I know thats not how to properly use the h1 tag, but like I said, it will get better</p>
   </div>
+  <div w3-include-html="welcome.html"></div>
+  <script>
+    w3IncludeHTML();
+  </script>
 </body>
 </html>
